--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,16 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/carrental
+spring.datasource.username=root
+spring.datasource.password=Bs5QG4Rd2W_
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.servlet.context-path=/api
 spring.liquibase.enabled=false
+spring.jpa.show-sql=true
+spring.docker.compose.enabled=false
+logging.level.org.springframework.security=DEBUG
+
+logging.level.com.carrental.carrent=DEBUG
+logging.level.org.springframework.web=DEBUG
+
+jwt.secret=your-super-secret-key-with-at-least-32-characters-for-hs256-algorithm
+jwt.expiration=86400000
