- Implement CRUD operations for Users Service with JWT authentication - Add User entity and database table with proper constraints - Implement Rental management system with list/detail endpoints - Add Rental entity with date constraints and car availability validation - Implement user-specific rental filtering and admin oversight - Add rental return functionality with inventory management - Integrate Telegram notification service for rental events - Implement scheduled daily overdue rental checks - Add Stripe payment integration with session management - Create Payment entity with success/cancel endpoints - Implement payment expiration tracking and renewal - Add user payment validation before new rentals - Configure Docker support for containerized deployment - Secure all sensitive data with environment variables
Key features:
- JWT-based authentication and authorization
- Role-based access control (admin/customer)
- Telegram notifications for rentals and payments
- Stripe payment processing with webhooks
- Scheduled tasks for business logic
- Comprehensive API endpoints with validation
- Docker containerization ready"

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,13 @@
-MYSQL_DATABASE=s
-MYSQL_USER=
-MYSQL_PASSWORD=
-MYSQL_ROOT_PASSWORD=
+#MySQL Configuration
+CONTAINER_NAME=
+MYSQLDB_VERSION=
+MYSQLDB_PORT=
+
+MYSQLDB_USER=
+MYSQLDB_PASSWORD=
+MYSQLDB_ROOT_PASSWORD=
+MYSQLDB_DATABASE=
+
+#Spring Boot Configuration
+JWT_SECRET=
+JWT_EXPIRATION=
