--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,14 +1,21 @@
+# Test configuration
+spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:false}
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.datasource.username=sa
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+# Telegram bot test configuration
+telegram.bot.token=${TELEGRAM_BOT_TOKEN:8268394885:AAGfhq0IacK5TNAsLeWDlEuIPhkwQVP2BO0}
+telegram.bot.username=${TELEGRAM_BOT_USERNAME:carrentaltest1234_bot}
+telegram.bot.admin-chat-id=${TELEGRAM_BOT_ADMIN_CHAT_ID:390432564}
 
-spring.security.filter.order=10
+# JWT test configuration
+jwt.secret=${JWT_SECRET:MyJwtSecretKeyj98ty4j98hgj95j98hgj98hj}
+jwt.expiration=${JWT_EXPIRATION:86400000}
 
-jwt.secret=test-secret-key-for-testing-only
-jwt.expiration=3600000
+# Stripe test configuration
+stripe.secret.key=${STRIPE_SECRET_KEY:sk_test_xxx}
+
+# Disable features for tests
+spring.docker.compose.enabled=${SPRING_DOCKER_COMPOSE_ENABLED:false}
