📋 Summary Added extensive test coverage across the application and refined service layer logic to enhance reliability and maintainability. Implemented modern testing practices with Mockito for isolated unit tests and Spring Boot Test for integration testing.
🧪 Testing Stack & Approach
Mockito for mocking dependencies and behavior verification

Spring Boot Test with @SpringBootTest for integration testing

Spring Security Test with @WithMockUser for authentication mocking

Test Containers for database testing where applicable

JUnit 5 with modern assertion libraries

🎯 Test Coverage Added
🔐 Authentication Layer
AuthenticationControllerTest - Registration and login flows

Security integration tests with role-based access control

🚗 Car Management
CarControllerTest - CRUD operations with manager authorization

CarServiceTest - Business logic validation

CarRepositoryTest - Data access layer testing

📝 Rental Operations
RentalControllerTest - Complete rental lifecycle testing

RentalServiceTest - Rental business logic validation

RentalRepositoryTest - Custom query and specification testing

RentalSpecificationTest - Dynamic filtering capabilities

💳 Payment Processing
PaymentControllerTest - Payment creation and status handling

PaymentServiceTest - Payment processing logic

PaymentRepositoryTest - Payment data access patterns

StripeServiceTest - External payment gateway integration

👥 User Management
UserControllerTest - User profile and role management

UserServiceTest - User service layer logic

UserRepositoryTest - User data persistence tests

🤖 Telegram Integration
TelegramNotificationServiceTest - Notification delivery testing

🛠 Technical Improvements
Service Layer Enhancements
Refined business logic in service implementations

Improved error handling and exception management

Enhanced validation patterns

Optimized database operations

Test Infrastructure
TestConfig.java - Centralized test configuration

SQL test data scripts - Consistent test data setup

Modu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.liquibase.enabled=true
 spring.jpa.show-sql=true
 spring.docker.compose.enabled=false
 logging.level.org.springframework.security=DEBUG
+telegram.bot.enabled=true
