--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,17 +1,19 @@
 # Test configuration
 spring.liquibase.enabled=${SPRING_LIQUIBASE_ENABLED:false}
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
 spring.datasource.password=
+spring.security.oauth2.client.registration.test.client-id=test-client
+spring.security.oauth2.client.registration.test.client-secret=test-secret
 
 # Telegram bot test configuration
-telegram.bot.token=${TELEGRAM_BOT_TOKEN:8268394885:AAGfhq0IacK5TNAsLeWDlEuIPhkwQVP2BO0}
-telegram.bot.username=${TELEGRAM_BOT_USERNAME:carrentaltest1234_bot}
-telegram.bot.admin-chat-id=${TELEGRAM_BOT_ADMIN_CHAT_ID:390432564}
+telegram.bot.enabled=false
 
 # JWT test configuration
-jwt.secret=${JWT_SECRET:MyJwtSecretKeyj98ty4j98hgj95j98hgj98hj}
+jwt.secret=${JWT_SECRET:test-jwt-secret-key-for-testing-purposes-only-very-long-secret-key}
 jwt.expiration=${JWT_EXPIRATION:86400000}
 
 # Stripe test configuration
